Fixed font, added about, fixed spacing

--- a/css/edgy.css
+++ b/css/edgy.css
@@ -59,6 +59,13 @@ a {
     text-decoration: none;
     font-size: 18px;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    font-size: 18px;
+}
+
 a:hover {
     color: #000;
 }
