--- a/css/master.css
+++ b/css/master.css
@@ -18,6 +18,13 @@ h1 {
      letter-spacing: 30px;
 }
 
+
+h2 {
+     color: inherit;
+     text-decoration: none;
+     font-size: 18px;
+}
+
 @media only screen and (max-width: 768px) {
      h1 {
           font-size: 12px;
